--- a/HospitalDatabase/frmPatient.resx
+++ b/HospitalDatabase/frmPatient.resx
@@ -220,6 +220,9 @@
         QwxTidKhJgAAAABJRU5ErkJggg==
 </value>
   </data>
+  <metadata name="hospitalDataSet.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
   <metadata name="tblPatientTableAdapter.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>337, 17</value>
   </metadata>
